--- a/projects/sequence_prediction/discrete_sequences/tm/experiments.cfg
+++ b/projects/sequence_prediction/discrete_sequences/tm/experiments.cfg
@@ -34,7 +34,7 @@ iterations = 19999
 [high-order-distributed-random-multiple-predictions]
 dataset = 'high-order'
 num_predictions = [2, 4]
-seed = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
+seed = [0]
 iterations = 11999
 
 
@@ -70,7 +70,7 @@ iterations = 400000
 dataset = 'high-order'
 verbosity = 1
 num_predictions = 1
-seed = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+seed = [0]
 perturb_after = 10000
 iterations = 19999
 
